feature: se agrega animacion de unidad, y refactoring general